// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform property throws if track decorator is applied to a class method 1`] = `
Object {
  "column": 0,
  "length": 6,
  "line": 4,
  "start": 66,
}
`;

exports[`Transform property throws if track decorator is applied to a getter 1`] = `
Object {
  "column": 0,
  "length": 6,
  "line": 3,
  "start": 57,
}
`;

exports[`Transform property throws if track decorator is applied to a setter 1`] = `
Object {
  "column": 0,
  "length": 6,
  "line": 4,
  "start": 66,
}
`;
